--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,10 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <title>Document</title>
+
+  <link rel="stylesheet" href="/css/style.css">
+<link rel="icon" type="image/jpg" href="images/icon.jpg"> 
+  <title>Добровольный Оркестр Хемулей</title>
 </head>
 
 <body>
+  {{>social}}
   {{>navbar}}
   {{{body}}}
 </body>
