--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,16 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
 
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/social.css">
+  <link rel="stylesheet" href="/css/table.css">
 <link rel="icon" type="image/jpg" href="images/icon.jpg"> 
   <title>Добровольный Оркестр Хемулей</title>
 </head>
 
 <body>
-  {{>social}}
   {{>navbar}}
   {{{body}}}
+  {{>carousel}}
+  {{>about}}
+  {{>afisha}}
+  {{>contact}}
+  {{>footer}}
 </body>
 
 </html>
