--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,14 +1,21 @@
 {{!-- <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'> --}}
-
-
+<div class="wrapper">
+  <ul>
+    <li class="facebook"><a href="https://www.facebook.com/pg/dobrorkestr/posts/?ref=page_internal"><i class="fa fa-facebook " aria-hidden="true"></i></a></li>
+    <li class="youtube"><a href="https://www.youtube.com/channel/UCeJWA99_qfr3VF13VuphR8A"><i class="fa fa-youtube " aria-hidden="true"></i></a></li>
+    <li class="vk"><a href="https://vk.com/dobr_orkestr"><i class="fa fa-vk " aria-hidden="true"></i></a></li>
+    <li class="instagram"><a href="https://ru-ru.facebook.com/help/instagram/155940534568753?helpref=hc_fnav"><i class="fa fa-instagram " aria-hidden="true"></i></a></li>
+    <li class="whatsapp"><a href="#"><i class="fa fa-whatsapp " aria-hidden="true"></i></a></li>
+  </ul>
+</div>
+<div id="navbar">
 <a href="#" class="btn">О нас</a>
 <a href="#" class="btn">Музыка</a>
 <a href="#" class="btn">Видео</a>
 <a href="#" class="btn">Фотографии</a>
 <a href="#" class="btn">Афиша</a>
 <a href="#" class="btn">Контакты</a>
-
-
+</div>
 <style>
   * {
     -webkit-transition-property: all;
@@ -24,8 +31,6 @@
     text-align: center;
     font-family: 'Oswald', sans-serif;
   }
-
-
 
   .btn {
     color: #999;
@@ -60,3 +65,24 @@
     margin-top: 400px;
   }
 </style>
+
+s
+<script>
+  // When the user scrolls the page, execute myFunction
+window.onscroll = function() {myFunction()};
+
+// Get the navbar
+var navbar = document.getElementById("navbar");
+
+// Get the offset position of the navbar
+var sticky = navbar.offsetTop;
+
+// Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
+function myFunction() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+}
+</script>
