--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -1,58 +1,64 @@
-
 <h2>Наша команда: </h2>
 <div id="card-container">
-<div class="card" style="width: 18rem;">
-  <img src="/images/boris.jpg" tabindex="0" class="card-img-top" alt="...">
-  <div class="card-body">
-    <div class="card-text">
-    <p><b>Борис Фаддеев - вокал, гитара, губная гармоника, верлибры.</b></p>Окончил СПбГУП - факультет культуры.
-    Организатор, вдохновитель, производитель идей и беспорядка.</div>
-  </div>
-</div>
-
-<div class="card" style="width: 18rem;">
-  <img src="/images/kristina.jpg" tabindex="1" class="card-img-top" alt="...">
-  <div class="card-body">
-    <div class="card-text">
-    <p><b>Кристина Крылатова - виолончель</b></p>Закончила магистратуру Российскую Академию Музыки им. Гнесиных. Лауреат
-    всероссийских конкурсов. Работает в Академическом симфоническом оркестре Московской филармонии.</div>
-  </div>
-</div>
-
-<div class="card" style="width: 18rem;">
-  <img src="/images/vasil.jpg" tabindex="2" class="card-img-top" alt="...">
-  <div class="card-body">
-    <div class="card-text">
-    <p><b>Василий Рогожин - бас-гитара, вокал.</b></p>Окончил ЦССМШ при консерватории (фортепиано), потом АМУ при
-    консерватории (кафедра теории музыки). Так же окончил Институт Современного Искусства (бас-гитара). Играл во многих
-    проектах, с музыкантами из разных стран в разных стилях и направлениях, лауреат всероссийских фестивалей как
-    пианист-концертмейстер</div>
-  </div>
-</div>
-
-<div class="card" style="width: 18rem;">
-  <img src="/images/zoya.jpg" tabindex="3" class="card-img-top" alt="...">
-  <div class="card-body">
-    <div class="card-text">
-    <p><b>Зоя Вязовская - флейты, арфа, скрипка, вокал.</b></p>Окончив музыкальные школы как пианистка, арфистка,
-    скрипачка и флейтистка, поступила в АМК при МГК им.Чайковского, где совмещала учебу на теоретическом и духовом
-    отделениях.
-    С отличием закончила МГК им.Чайковского, а также Королевскую Академию Музыки в Лондоне</div>
-  </div>
-</div>
-
-<div class="card" style="width: 18rem;">
-  <img src="/images/anton.jpg" tabindex="4" class="card-img-top" alt="...">
-  <div class="card-body">
-    <div class="card-text">
-   <p><b>Антон Прищепа - композитор, клавишные, кларнет, гармоника, дудук, вокал.</b></p> Окончил Российскую Академию
-    Музыки им. Гнесиных, а затем и аспирантуру по двум специальностям: как кларнетист (класс Николая Волкова) и как
-    композитор (класс профессора Кирилла Волкова).Лауреат конкурса «Сибирские музыкальные ассамблеи» (2002 год
-    Новосибирск). Концертирующий солист и преподаватель. Он является заведующим кафедрой духовых инструментов в
-    Московской средней специальной музыкальной школе им. Гнесиных.
+  <div class="card" style="width: 18rem;">
+    <img src="/images/boris.jpg" tabindex="0" class="card-img-top" alt="...">
+    <div class="card-body">
+      <div class="card-text">
+        <p><b>Борис Фаддеев - вокал, гитара, губная гармоника, верлибры.</b></p>Окончил СПбГУП - факультет культуры.
+        Организатор, вдохновитель, производитель идей и беспорядка.
+      </div>
     </div>
   </div>
-</div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="/images/kristina.jpg" tabindex="1" class="card-img-top" alt="...">
+    <div class="card-body">
+      <div class="card-text">
+        <p><b>Кристина Крылатова - виолончель</b></p>Закончила магистратуру Российскую Академию Музыки им. Гнесиных.
+        Лауреат
+        всероссийских конкурсов. Работает в Академическом симфоническом оркестре Московской филармонии.
+      </div>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="/images/vasil.jpg" tabindex="2" class="card-img-top" alt="...">
+    <div class="card-body">
+      <div class="card-text">
+        <p><b>Василий Рогожин - бас-гитара, вокал.</b></p>Окончил ЦССМШ при консерватории (фортепиано), потом АМУ при
+        консерватории (кафедра теории музыки). Так же окончил Институт Современного Искусства (бас-гитара). Играл во
+        многих
+        проектах, с музыкантами из разных стран в разных стилях и направлениях, лауреат всероссийских фестивалей как
+        пианист-концертмейстер
+      </div>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="/images/zoya.jpg" tabindex="3" class="card-img-top" alt="...">
+    <div class="card-body">
+      <div class="card-text">
+        <p><b>Зоя Вязовская - флейты, арфа, скрипка, вокал.</b></p>Окончив музыкальные школы как пианистка, арфистка,
+        скрипачка и флейтистка, поступила в АМК при МГК им.Чайковского, где совмещала учебу на теоретическом и духовом
+        отделениях.
+        С отличием закончила МГК им.Чайковского, а также Королевскую Академию Музыки в Лондоне
+      </div>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="/images/anton.jpg" tabindex="4" class="card-img-top" alt="...">
+    <div class="card-body">
+      <div class="card-text">
+        <p><b>Антон Прищепа - композитор, клавишные, кларнет, гармоника, дудук, вокал.</b></p> Окончил Российскую
+        Академию
+        Музыки им. Гнесиных, а затем и аспирантуру по двум специальностям: как кларнетист (класс Николая Волкова) и как
+        композитор (класс профессора Кирилла Волкова).Лауреат конкурса «Сибирские музыкальные ассамблеи» (2002 год
+        Новосибирск). Концертирующий солист и преподаватель. Он является заведующим кафедрой духовых инструментов в
+        Московской средней специальной музыкальной школе им. Гнесиных.
+      </div>
+    </div>
+  </div>
 
 
 
@@ -66,30 +72,35 @@
     flex-wrap: wrap;
     float: left;
   }
+
   .card-text {
     text-overflow: ellipsis;
     white-space: normal;
     height: 100%;
     overflow: hidden;
     width: 100%;
+
   }
-  h2{
-  display: flex;
-  justify-content: center; 
-  font-family: 'Oswald', sans-serif;
-  color: #999;
+
+  h2 {
+    display: flex;
+    justify-content: center;
+    font-family: 'Oswald', sans-serif;
+    color: #999;
   }
-  .card{
+
+  .card {
     width: 350px;
     height: 600px;
     margin: 20px;
     padding: 5px;
   }
-.card-img-top{
-  height: 300px;
-}
 
-img[tabindex="0"] {
+  .card-img-top {
+    height: 300px;
+  }
+
+  img[tabindex="0"] {
     cursor: zoom-in;
   }
 
@@ -115,7 +126,7 @@ img[tabindex="0"] {
     cursor: zoom-out;
   }
 
-img[tabindex="1"] {
+  img[tabindex="1"] {
     cursor: zoom-in;
   }
 
