--- a/views/partials/contact.hbs
+++ b/views/partials/contact.hbs
@@ -1,45 +1,30 @@
-
-  <style>   
-    .card{
-      display:inline-flex;
-      align-self: center;
-    }
-  </style>
-
-  <div class="card" style="width: 28rem;">
-    <div class="card-body">
-      <h5 class="card-title">Менеджер</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Татьяна</h6>
-      <p class="card-text">EMAIL: tatyana@gmail.com</p>
-      <p class="card-text">тел. 666-66-66</p>
-      <a href="#" class="card-link">Написать</a>
-      <a href="#" class="card-link"></a>
-    </div>
+<div class="card border-info mb-3" style="max-width: 18rem;">
+  <div class="card-header">Менеджер</div>
+  <div class="card-body text-info">
+    <p class="card-title">Татьяна</p>
+    <p class="card-title">EMAIL: tatuana@mail.ru</p>
+    <p class="card-text">т. +7 988 343 54 35
+    </p>
   </div>
+</div>
 
-  <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
-    <div class="card-header">Менеджер</div>
-    <div class="card-body">
-      <p class="card-text">Татьяна</p>
-      <h5 class="card-title">EMAIL: tatyana@gmail.com</h5>
-      <p class="card-text">тел. 666-66-66</p>
-    </div>
+<div class="card border-info mb-3" style="max-width: 18rem;">
+  <div class="card-header">Директор</div>
+  <div class="card-body text-info">
+    <p class="card-title">Татьяна</p>
+    <p class="card-title">EMAIL: tatuana@mail.ru</p>
+    <p class="card-text">т. +7 988 343 54 35
+    </p>
   </div>
+</div>
 
-  <div class="card bg-light mb-3" style="max-width: 18rem;">
-    <div class="card-header">Header</div>
-    <div class="card-body">
-      <h5 class="card-title">Light card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-    </div>
-  </div>
+<style>
+  .card {
+    margin: 20px;
 
-  <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-    <div class="card-header">Header</div>
-    <div class="card-body">
-      <h5 class="card-title">Dark card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-    </div>
-  </div>
+  }
+
+  .card-body {
+    opacity: 0.9;
+  }
+</style>
