--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -1,6 +1,6 @@
 <h2>Наша команда: </h2>
-<div id="card-container">
-  <div class="card" style="width: 18rem;">
+<div id="card-container-about">
+  <div class="card-about" style="width: 18rem;">
     <img src="/images/boris.jpg" tabindex="0" class="card-img-top" alt="...">
     <div class="card-body">
       <div class="card-text">
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
+  <div class="card-about" style="width: 18rem;">
     <img src="/images/kristina.jpg" tabindex="1" class="card-img-top" alt="...">
     <div class="card-body">
       <div class="card-text">
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
+  <div class="card-about" style="width: 18rem;">
     <img src="/images/vasil.jpg" tabindex="2" class="card-img-top" alt="...">
     <div class="card-body">
       <div class="card-text">
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
+  <div class="card-about" style="width: 18rem;">
     <img src="/images/zoya.jpg" tabindex="3" class="card-img-top" alt="...">
     <div class="card-body">
       <div class="card-text">
@@ -46,7 +46,7 @@
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
+  <div class="card-about" style="width: 18rem;">
     <img src="/images/anton.jpg" tabindex="4" class="card-img-top" alt="...">
     <div class="card-body">
       <div class="card-text">
@@ -65,7 +65,7 @@
 
 </div>
 <style>
-  #card-container {
+  #card-container-about {
     display: inline-flex;
     justify-content: space-between;
     flex-direction: row;
@@ -89,7 +89,7 @@
     color: #999;
   }
 
-  .card {
+  .card-about {
     width: 350px;
     height: 600px;
     margin: 20px;
