--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/social.css">
   <link rel="stylesheet" href="/css/table.css">
+  <link rel="stylesheet" href="/css/contact.css">
+  <link rel="stylesheet" href="/css/video.css">
   <link rel="icon" type="image/jpg" href="images/icon.jpg">
   <title>Добровольный Оркестр Хемулей</title>
 </head>
