--- a/views/partials/contact.hbs
+++ b/views/partials/contact.hbs
@@ -1,3 +1,4 @@
+<div class="card-container">
 <div class="card border-info mb-3" style="max-width: 18rem;">
   <div class="card-header">Менеджер</div>
   <div class="card-body text-info">
@@ -17,7 +18,7 @@
     </p>
   </div>
 </div>
-
+</div>
 <style>
   .card {
     margin: 20px;
