--- a/views/partials/contact.hbs
+++ b/views/partials/contact.hbs
@@ -1,5 +1,5 @@
 <div class="card-container">
-<div class="card border-info mb-3" style="max-width: 18rem;">
+<div class="card border-info mb-3 card-contact" style="max-width: 18rem;">
   <div class="card-header">Менеджер</div>
   <div class="card-body text-info">
     <p class="card-title">Татьяна</p>
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<div class="card border-info mb-3" style="max-width: 18rem;">
+<div class="card border-info mb-3 card-contact" style="max-width: 18rem;">
   <div class="card-header">Директор</div>
   <div class="card-body text-info">
     <p class="card-title">Татьяна</p>
