--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -1,4 +1,4 @@
-<h2>Наша команда: </h2>
+<h2 id="about-title">Наша команда: </h2>
 <div id="card-container-about">
   <div class="card" style="width: 18rem;">
     <img src="/images/boris.jpg" tabindex="0" class="card-img-top" alt="...">
@@ -67,7 +67,7 @@
 <style>
   #card-container-about {
     display: inline-flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-direction: row;
     flex-wrap: wrap;
     float: left;
@@ -82,7 +82,7 @@
 
   }
 
-  h2 {
+  #about-title {
     display: flex;
     justify-content: center;
     font-family: 'Oswald', sans-serif;
