--- a/views/partials/contact.hbs
+++ b/views/partials/contact.hbs
@@ -1,4 +1,4 @@
-<div class="card-container">
+<div class="card-container" id="card-container">
 <div class="card border-info mb-3 card-contact" style="max-width: 18rem;">
   <div class="card-header">Менеджер</div>
   <div class="card-body text-info">
