--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -11,10 +11,10 @@
 <div id="navbar">
 <a href="#" class="btn">О нас</a>
 <a href="#" class="btn">Музыка</a>
-<a href="#" class="btn">Видео</a>
+<a href="#video-container" class="btn">Видео</a>
 <a href="#" class="btn">Фотографии</a>
 <a href="#" class="btn">Афиша</a>
-<a href="#" class="btn">Контакты</a>
+<a href="#card-container" class="btn">Контакты</a>
 </div>
 <style>
   * {
