--- a/views/partials/video.hbs
+++ b/views/partials/video.hbs
@@ -1,26 +1,27 @@
-<div class="video-container">
+  <h2 id="video-title">Наши выступления:</h3>
+<div class="video-container" id="video-container">
   <div class="videoDiv">
-    <iframe width="490" height="240" src="https://www.youtube.com/embed/AzqLEIW5fR0" frameborder="0"
+    <iframe width="440" height="240" src="https://www.youtube.com/embed/AzqLEIW5fR0" frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     <div class="videoDiv">
-    <iframe src="//vk.com/video_ext.php?oid=39941163&id=456239234&hash=dd2737e0b13d913e&hd=2" width="490" height="240"
+    <iframe src="//vk.com/video_ext.php?oid=39941163&id=456239234&hash=dd2737e0b13d913e&hd=2" width="440" height="240"
       frameborder="0" allowfullscreen></iframe>
       </div>
     <div class="videoDiv">
-    <iframe src="//vk.com/video_ext.php?oid=1253116&id=456239062&hash=02c22a897b88f6fc&hd=2" width="490" height="240"
+    <iframe src="//vk.com/video_ext.php?oid=1253116&id=456239062&hash=02c22a897b88f6fc&hd=2" width="440" height="240"
       frameborder="0" allowfullscreen></iframe>
       </div>
     <div class="videoDiv">
-    <iframe src="//vk.com/video_ext.php?oid=-16736325&id=456239029&hash=716a52cfca228522&hd=2" width="490" height="240"
+    <iframe src="//vk.com/video_ext.php?oid=-16736325&id=456239029&hash=716a52cfca228522&hd=2" width="440" height="240"
       frameborder="0" allowfullscreen></iframe>
       </div>
-    <div class="videoDiv">
-    <iframe src="//vk.com/video_ext.php?oid=39941163&id=456239178&hash=a3152d779634f393&hd=2" width="490" height="240"
+    {{!-- <div class="videoDiv">
+    <iframe src="//vk.com/video_ext.php?oid=39941163&id=456239178&hash=a3152d779634f393&hd=2" width="440" height="240"
       frameborder="0" allowfullscreen></iframe>
-      </div>
-    <div class="videoDiv">
-      <iframe src="//vk.com/video_ext.php?oid=39941163&id=456239180&hash=8f2832d9440e3b67&hd=2" width="490" height="240"
+      </div> --}}
+    {{!-- <div class="videoDiv">
+      <iframe src="//vk.com/video_ext.php?oid=39941163&id=456239180&hash=8f2832d9440e3b67&hd=2" width="440" height="240"
         frameborder="0" allowfullscreen></iframe>
-        </div>
+        </div> --}}
     </div>
