--- a/public/css/video.css
+++ b/public/css/video.css
@@ -2,9 +2,19 @@
   display: inline-flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .videoDiv {
   width: 20px;
   height: 20px;
+  width: 50%;
+  height: auto;
+}
+
+#video-title {
+  font-family: 'Oswald', sans-serif;
+  color: #999;
+  margin-top: 4%;
+  margin-bottom: 4%;
 }
