--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -43,16 +43,21 @@
 
           <div class="col-md-4 col-sm-6 col-xs-12">
             <ul class="social-icons">
-              <li><a class="facebook" href="https://www.facebook.com/pg/dobrorkestr/posts/?ref=page_internal"><i class="fa fa-facebook"></i></a></li>
-              <li><a class="youtube" href="https://www.youtube.com/channel/UCeJWA99_qfr3VF13VuphR8A"><i class="fa fa-youtube"></i></a></li>
-              <li><a class="vk" href="https://vk.com/dobr_orkestr"><i class="fa fa-vk"></i></a></li>
-              <li><a class="instagram" href="https://ru-ru.facebook.com/help/instagram/155940534568753?helpref=hc_fnav"><i class="fa fa-instagram"></i></a></li>   
+              <li><a class="facebook" href="https://www.facebook.com/pg/dobrorkestr/posts/?ref=page_internal"><i class="fa fa-facebook bottom-icons"></i></a></li>
+              <li><a class="youtube" href="https://www.youtube.com/channel/UCeJWA99_qfr3VF13VuphR8A"><i class="fa fa-youtube bottom-icons"></i></a></li>
+              <li><a class="vk" href="https://vk.com/dobr_orkestr"><i class="fa fa-vk bottom-icons"></i></a></li>
+              <li><a class="instagram" href="https://ru-ru.facebook.com/help/instagram/155940534568753?helpref=hc_fnav"><i class="fa fa-instagram bottom-icons"></i></a></li>   
             </ul>
           </div>
         </div>
       </div>
 </footer>
 <style>
+.bottom-icons {
+  position: relative;
+  bottom: -56%;
+}
+
   .site-footer
 {
   padding:45px 0 20px;
