--- a/views/partials/team.hbs
+++ b/views/partials/team.hbs
@@ -1,5 +1,5 @@
-<h2 id="about-title">Наша команда: </h2>
 <div id="card-container-about">
+<h2 id="about-title">Наша команда: </h2>
   <div class="card" style="width: 18rem;">
     <img src="/images/boris.jpg" tabindex="0" class="card-img-top" alt="...">
     <div class="card-body">
@@ -85,8 +85,15 @@
   #about-title {
     display: flex;
     justify-content: center;
-    font-family: 'Oswald', sans-serif;
-    color: #999;
+  width: 100%;
+  color:#999;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 2em;
+  font-family: 'Poiret One', cursive;
+  text-align: center;
+  font-size:40px;
   }
 
   .card {
