--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,8 +1,11 @@
 .card-contact {
-  height: 200px !important;
+  height: 250px !important;
   background-color: #343a40;
 }
-
+.card-contact2 {
+  height: 250px !important;
+  background: rgba(0, 0, 0, 0);
+}
 .card-container {
   display: inline-flex;
 }
@@ -14,7 +17,30 @@
 .border-info {
   border-color: #343a40 !important;
 }
-
+.border-info2 {
+  background: rgba(0, 0, 0, 0)!important;
+}
 .card-header {
-color: white;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  color:#fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-family: 'Poiret One', cursive;
+  text-align: center;
+  font-size:16px;
+}
+.card-title{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  color:#fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-family: 'Poiret One', cursive;
+  text-align: center;
+  font-size:17px;
 }
