--- a/public/css/video.css
+++ b/public/css/video.css
@@ -13,8 +13,28 @@
 }
 
 #video-title {
-  font-family: 'Oswald', sans-serif;
-  color: #999;
-  margin-top: 4%;
-  margin-bottom: 4%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  color:#999;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 2em;
+  font-family: 'Poiret One', cursive;
+  text-align: center;
+  font-size:80px;
+}
+.videolink{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  color:#999;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 2em;
+  font-family: 'Poiret One', cursive;
+  text-align: center;
+  font-size:20px;
 }
