--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="/css/table.css">
   <link rel="stylesheet" href="/css/contact.css">
   <link rel="stylesheet" href="/css/video.css">
-  <link rel="icon" type="image/jpg" href="images/icon.jpg">
+  <link rel="icon" type="image/png" href="images/icon.png">
   <title>Добровольный Оркестр Хемулей</title>
 </head>
 
@@ -23,8 +23,10 @@
   {{>navbar}}
   {{{body}}}
   {{>carousel}}
-  {{>about}}
+  {{>team}}
+  {{>audio}}
   {{>video}}
+  {{>photo}}
   {{>afisha}}
   {{>contact}}
   {{>footer}}
