--- a/views/partials/afisha.hbs
+++ b/views/partials/afisha.hbs
@@ -1,35 +1,52 @@
-<div id="title">
- <p>Орекстр забыл название</p>
-</div>
+<div id="card-container-afisha">
+  <div id="title">
+    <h2 class="afishas">Афиша</h2>
+  </div>
 
-<table class="table table-hover table-dark">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Дата</th>
-      <th scope="col">Место</th>
-      <th scope="col">Билеты</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td><button type="button" class="btn btn-dark">Купить билет</button></td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td><button type="button" class="btn btn-dark">Купить билет</button></td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      {{!-- <td colspan="2">Larry the Bird</td> --}}
-      <td>Jacob</td>
-      <td>Jacob</td>
-      <td><button type="button" class="btn btn-dark">Купить билет</button></td>
-    </tr>
-  </tbody>
-</table>
+  <table class="table table-hover table-dark">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Дата</th>
+        <th scope="col">Место</th>
+        <th scope="col">Билеты</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td><button type="button" class="btn btn-dark">Купить билет</button></td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td><button type="button" class="btn btn-dark">Купить билет</button></td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        {{!-- <td colspan="2">Larry the Bird</td> --}}
+        <td>Jacob</td>
+        <td>Jacob</td>
+        <td><button type="button" class="btn btn-dark">Купить билет</button></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<style>
+  .afishas {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    color: #999;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 2em;
+    font-family: 'Poiret One', cursive;
+    text-align: center;
+    font-size: 80px;
+  }
+</style>
