--- a/views/partials/contact.hbs
+++ b/views/partials/contact.hbs
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <div class="card border-info2 mb-3 card-contact2" style="max-width: 18rem;">
+  <div class="card border-info2 mb-3 card-contact2" style="max-width: 10rem;">
 
     <div class="vkPodp"></div>
     <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
@@ -41,6 +41,16 @@
       VK.Widgets.Group("vk_groups", { mode: 3 }, 16736325);
     </script>
   </div>
+
+
+  <div class="card border-info2 mb-3 card-contact2" style="max-width: 18rem;">
+
+<iframe src="https://averin.pro/widget.php?l=dohemuli&style=1&width=250&gallery=1&s=80&icc=3&icr=3&t=1&tt=Мы в Инстаграм&h=1&ttcolor=808080&th=333333&bw=999999&bscolor=FFFFFF&bs=FF0000&ts=Подписаться&ch=utf8" allowtransparency="true" frameborder="0" scrolling="no" style="border:none;overflow:hidden;width:350px; height: 490px" ></iframe>
+  </div>
+
+
+
+
 
 
 
