--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -45,7 +45,7 @@
           <li><a class="youtube" href="https://www.youtube.com/channel/UCeJWA99_qfr3VF13VuphR8A"><i
                 class="fa fa-youtube"></i></a></li>
           <li><a class="vk" href="https://vk.com/dobr_orkestr"><i class="fa fa-vk"></i></a></li>
-          <li><a class="instagram" href="https://ru-ru.facebook.com/help/instagram/155940534568753?helpref=hc_fnav"><i
+          <li><a class="instagram" href="https://www.instagram.com/dohemuli/"><i
                 class="fa fa-instagram"></i></a></li>
         </ul>
       </div>
