--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,17 +7,20 @@
     <li class="youtube"><a href="https://www.youtube.com/channel/UCeJWA99_qfr3VF13VuphR8A"><i class="fa fa-youtube "
           aria-hidden="true"></i></a></li>
     <li class="vk"><a href="https://vk.com/dobr_orkestr"><i class="fa fa-vk " aria-hidden="true"></i></a></li>
-    <li class="instagram"><a href="https://ru-ru.facebook.com/help/instagram/155940534568753?helpref=hc_fnav"><i
+    <li class="instagram"><a href="https://www.instagram.com/dohemuli/"><i
           class="fa fa-instagram " aria-hidden="true"></i></a></li>
     <li class="whatsapp"><a href="https://api.whatsapp.com/send?phone=79643360210&data=Abtq5E3QdaKQ3Fsu_ED0gDmMGMcUD9dQXewLtzJx_YNw07QUzxpWPIas43em62A08TRO3dna__Q8BMGXS81y5eQbZXNwmarvvZJsX1XIo_U4Fnutlo3N1t8ek9yCot10Orw&source=FB_Ads"><i class="fa fa-whatsapp " aria-hidden="true"></i></a></li>
   </ul>
 </div>
 <div id="navbar">
   <a href="#card-container-about" class="btn">О нас</a>
-  <a href="#containerAudio" class="btn">Музыка</a>
-  <a href="#video-container" class="btn">Видео</a>
-  <a href="#photoContainer" class="btn">Фотографии</a>
+  <a href="#" class="btn">Новости</a>
+  <a href="#" class="btn">Проекты</a>
   <a href="#card-container-afisha" class="btn">Афиша</a>
+  <a href="#video-container" class="btn">Видео</a>
+  <a href="#containerAudio" class="btn">Музыка</a>
+  <a href="#photoContainer" class="btn">Фотографии</a>
+  <a href="#" class="btn">Пресса</a>
   <a href="#card-container" class="btn">Контакты</a>
 </div>
 <style>
