--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,4 @@
 <script src="https://vk.com/js/api/openapi.js?168" type="text/javascript"></script>
-<!-- Site footer -->
 <footer class="site-footer">
   <div class="container">
     <div class="row">
@@ -41,12 +40,12 @@
       <div class="col-md-4 col-sm-6 col-xs-12">
         <ul class="social-icons">
           <li><a class="facebook" href="https://www.facebook.com/pg/dobrorkestr/posts/?ref=page_internal"><i
-                class="fa fa-facebook"></i></a></li>
+                class="fa fa-facebook bottom-icons"></i></a></li>
           <li><a class="youtube" href="https://www.youtube.com/channel/UCeJWA99_qfr3VF13VuphR8A"><i
-                class="fa fa-youtube"></i></a></li>
-          <li><a class="vk" href="https://vk.com/dobr_orkestr"><i class="fa fa-vk"></i></a></li>
+                class="fa fa-youtube bottom-icons"></i></a></li>
+          <li><a class="vk" href="https://vk.com/dobr_orkestr"><i class="fa fa-vk bottom-icons"></i></a></li>
           <li><a class="instagram" href="https://www.instagram.com/dohemuli/"><i
-                class="fa fa-instagram"></i></a></li>
+                class="fa fa-instagram bottom-icons"></i></a></li>
         </ul>
       </div>
     </div>
@@ -59,6 +58,11 @@
     margin-left: -50px;
     margin-bottom: -40px;
 
+  }
+
+  .bottom-icons {
+    position: relative;
+    bottom: -56%;
   }
 
   .site-footer {
@@ -226,7 +230,7 @@
     }
   }
 
-  .text-justify{
+  .text-justify {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -239,7 +243,8 @@
     text-align: center;
     font-size: 20px;
   }
-  p{
+
+  p {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -251,7 +256,8 @@
     text-align: center;
     font-size: 20px;
   }
-    h6{
+
+  h6 {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -263,7 +269,8 @@
     text-align: center;
     font-size: 20px;
   }
-  .footer-links{
+
+  .footer-links {
     width: 100%;
     color: #999;
     font-family: 'Poiret One', cursive;
