--- a/views/partials/about.hbs
+++ b/views/partials/about.hbs
@@ -1,55 +1,59 @@
 <div id="card-container-about">
 <h2 id="about-title">Наша команда: </h2>
-  <div class="card" style="width: 18rem;">
+  <div class="card about-card-div" style="width: 18rem;">
     <img src="/images/boris.jpg" tabindex="0" class="card-img-top" alt="...">
     <div class="card-body">
-      <div class="card-text">
+      <div class="card-text about-card-text">
         <p><b>Борис Фаддеев - вокал, гитара, губная гармоника, верлибры.</b></p>Окончил СПбГУП - факультет культуры.
         Организатор, вдохновитель, производитель идей и беспорядка.
       </div>
+        <p class="info-about-text">Наведите для подробной информации</p>
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
+  <div class="card about-card-div" style="width: 18rem;">
     <img src="/images/kristina.jpg" tabindex="1" class="card-img-top" alt="...">
     <div class="card-body">
-      <div class="card-text">
+      <div class="card-text about-card-text">
         <p><b>Кристина Крылатова - виолончель</b></p>Закончила магистратуру Российскую Академию Музыки им. Гнесиных.
         Лауреат
         всероссийских конкурсов. Работает в Академическом симфоническом оркестре Московской филармонии.
       </div>
+        <p class="info-about-text">Наведите для подробной информации</p>
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
+  <div class="card about-card-div" style="width: 18rem;">
     <img src="/images/vasil.jpg" tabindex="2" class="card-img-top" alt="...">
     <div class="card-body">
-      <div class="card-text">
+      <div class="card-text about-card-text">
         <p><b>Василий Рогожин - бас-гитара, вокал.</b></p>Окончил ЦССМШ при консерватории (фортепиано), потом АМУ при
         консерватории (кафедра теории музыки). Так же окончил Институт Современного Искусства (бас-гитара). Играл во
         многих
         проектах, с музыкантами из разных стран в разных стилях и направлениях, лауреат всероссийских фестивалей как
         пианист-концертмейстер
       </div>
+        <p class="info-about-text">Наведите для подробной информации</p>
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
+  <div class="card about-card-div" style="width: 18rem;">
     <img src="/images/zoya.jpg" tabindex="3" class="card-img-top" alt="...">
     <div class="card-body">
-      <div class="card-text">
+      <div class="card-text about-card-text">
         <p><b>Зоя Вязовская - флейты, арфа, скрипка, вокал.</b></p>Окончив музыкальные школы как пианистка, арфистка,
         скрипачка и флейтистка, поступила в АМК при МГК им.Чайковского, где совмещала учебу на теоретическом и духовом
         отделениях.
         С отличием закончила МГК им.Чайковского, а также Королевскую Академию Музыки в Лондоне
       </div>
+        <p class="info-about-text">Наведите для подробной информации</p>
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
+  <div class="card about-card-div" style="width: 18rem;">
     <img src="/images/anton.jpg" tabindex="4" class="card-img-top" alt="...">
     <div class="card-body">
-      <div class="card-text">
+      <div class="card-text about-card-text">
         <p><b>Антон Прищепа - композитор, клавишные, кларнет, гармоника, дудук, вокал.</b></p> Окончил Российскую
         Академию
         Музыки им. Гнесиных, а затем и аспирантуру по двум специальностям: как кларнетист (класс Николая Волкова) и как
@@ -57,6 +61,7 @@
         Новосибирск). Концертирующий солист и преподаватель. Он является заведующим кафедрой духовых инструментов в
         Московской средней специальной музыкальной школе им. Гнесиных.
       </div>
+        <p class="info-about-text">Наведите для подробной информации</p>
     </div>
   </div>
 
@@ -65,6 +70,23 @@
 
 </div>
 <style>
+.about-card-text {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #1b1b2b;
+  color: #fff;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.about-card-div {
+  background-color: #1b1b2b;
+  border: 0px !important;
+}
+
   #card-container-about {
     display: inline-flex;
     justify-content: space-evenly;
@@ -79,10 +101,13 @@
     height: 100%;
     overflow: hidden;
     width: 100%;
-
   }
 
-  #about-title {
+  .info-about-text {
+    color: #999;
+  }
+
+#about-title {
     display: flex;
     justify-content: center;
   width: 100%;
@@ -98,11 +123,20 @@
 
   .card {
     width: 350px;
-    height: 600px;
+    height: auto;
     margin: 20px;
     padding: 5px;
   }
 
+  .card img {
+    border-radius: 3%;
+  }
+
+
+  .card-body:hover .card-text {
+  visibility: visible;
+  opacity: 1;
+}
   .card-img-top {
     height: 300px;
   }
@@ -237,3 +271,4 @@
     cursor: zoom-out;
   }
 </style>
+
