--- a/views/partials/afisha.hbs
+++ b/views/partials/afisha.hbs
@@ -15,22 +15,22 @@
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td><button type="button" class="btn btn-dark">Купить билет</button></td>
+        <td>12.08.2020</td>
+        <td>Москва</td>
+        <td><button type="button" class="btn btn-dark"><a href='https://afisha.yandex.ru'/>Купить билет</a></button></td>
       </tr>
       <tr>
         <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td><button type="button" class="btn btn-dark">Купить билет</button></td>
+        <td>23.09.2020</td>
+        <td>Санкт-Петербург</td>
+        <td><button type="button" class="btn btn-dark"><a href='https://afisha.yandex.ru'/>Купить билет</a></button></td>
       </tr>
       <tr>
         <th scope="row">3</th>
         {{!-- <td colspan="2">Larry the Bird</td> --}}
-        <td>Jacob</td>
-        <td>Jacob</td>
-        <td><button type="button" class="btn btn-dark">Купить билет</button></td>
+        <td>10.10.2020</td>
+        <td>Казани</td>
+        <td><button type="button" class="btn btn-dark"><a href='https://afisha.yandex.ru'/>Купить билет</a></button></td>
       </tr>
     </tbody>
   </table>
