--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -22,7 +22,6 @@
           <li><a href="#card-container-about">О нас</a></li>
           <li><a href="#containerAudio">Музыка</a></li>
           <li><a href="#video-container">Видео</a></li>
-          <li><a href="">Фотографии</a></li>
           <li><a href="#card-container-afisha">Афиша</a></li>
           <li><a href="#card-container">Контакты</a></li>
         </ul>
@@ -39,7 +38,7 @@
 
       <div class="col-md-4 col-sm-6 col-xs-12">
         <ul class="social-icons">
-          <li><a class="facebook" href="https://www.facebook.com/pg/dobrorkestr/posts/?ref=page_internal"><i
+          <li><a class="facebook" href="https://www.facebook.com/pg/dobrorkestr"><i
                 class="fa fa-facebook bottom-icons"></i></a></li>
           <li><a class="youtube" href="https://www.youtube.com/channel/UCeJWA99_qfr3VF13VuphR8A"><i
                 class="fa fa-youtube bottom-icons"></i></a></li>
