--- a/views/partials/carousel.hbs
+++ b/views/partials/carousel.hbs
@@ -1,11 +1,11 @@
-<h1>Добровольный Оркестр Хемулей</h1>
+<h1 class="nameh1">Добровольный Оркестр Хемулей</h1>
 <link href="http://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet" type="text/css">
 
 <style>
   * {
     box-sizing: border-box;
   }
-h1{
+.nameh1{
   display: flex;
   justify-content: center;
   width: 100%;
@@ -115,14 +115,6 @@ h1{
     <div class="mySlides fade">
       <img src="images/co3.jpg">
     </div>
-
- {{!-- <div class="mySlides fade">
-      <img src="images/concert.jpg">
-    </div> --}}
-
-    {{!-- <div class="mySlides fade">
-      <img src="images/co.jpg">
-    </div>  --}}
 
   </div>
   <br>
