--- a/views/partials/contact.hbs
+++ b/views/partials/contact.hbs
@@ -2,7 +2,7 @@
 <div class="card-container" id="card-container">
 
 
-<div class="card border-info mb-3 card-contact" style="max-width: 18rem;">{{#each contacts}}
+{{!-- <div class="card border-info mb-3 card-contact" style="max-width: 18rem;">{{#each contacts}}
     <div class="card-header"><b>Организатор, вдохновитель, производитель идей и беспорядка. {{job}}</b></div>
     <div class="card-body text-info">
       <p class="card-title">Борис Фаддеев{{nameJob}}</p>
@@ -10,7 +10,16 @@
       <p class="card-title">Tel.: 7 964 336-02-10{{telJob}}</p>
     </div>
     {{/each}}
-  </div>
+  </div> --}}
+
+   <div class="card border-info mb-3 card-contact" style="max-width: 18rem;">
+    <div class="card-header"><b>Организатор, вдохновитель, производитель идей и беспорядка.</b></div>
+    <div class="card-body text-info">
+      <p class="card-title">Борис Фаддеев</p>
+      <p class="card-title">E-mail: <a href="mailto:https://vk.com/brain_spb"> https://vk.com/brain_spb</a></p>
+      <p class="card-title">Tel.: 7 964 336-02-10</p>
+    </div>
+  </div> 
 
   <div class="card border-info mb-3 card-contact" style="max-width: 18rem;">
     <div class="card-header"><b>Директор</b></div>
