--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -27,6 +27,7 @@
         </ul>
       </div>
     </div>
+    <br>
     <hr>
   </div>
   <div class="container">
@@ -103,7 +104,7 @@
   }
 
   .footer-links li {
-    display: block
+    display: inline-flex;
   }
 
   .footer-links a {
